syntax = "proto3";

option go_package = "./proto3";

service Greeter{
  rpc GetStream(StreamRequestData) returns (stream StreamResponseData);
}

message StreamRequestData{
  string data = 1;
}

message StreamResponseData{
  string data = 1;
}